--- a/playbook.yml
+++ b/playbook.yml
@@ -1,9 +1,20 @@
-
+---
 - name: manage webserver
   hosts: appserver
   remote_user: centos
-  gather_facts: false
+  gather_facts: true
   become: true
+#  vars_prompt:
+#    name: service_name
+#    prompt: 'enter service name'
+#  vars:
+#     service_name: sshd
+
+  handlers:
+  - name: restart_webservice
+    service:
+        name: "{{service_name}}"
+        state: restarted
 
   tasks:
   - name: install webserver
@@ -20,6 +31,19 @@
     copy:
         src: index.html
         dest: "/var/www/html/"
+    notify:
+        restart_webservice
+
+- name: manage users
+  hosts: jenkins
+  remote_user: centos
+  gather_facts: false
+  become: true
+  tasks:
+  - name: manage users
+    user:
+        name: "{{user_name}}"
+        state: present
 
 
 
